Cambiados logos e imagenes

--- a/index1.0.html
+++ b/index1.0.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"><img src="img/logoseur.jpg"></div>
+            <div class="logo"><img src="img/logo.jpg"></div>
             <nav>
                 <a href="#" >Inicio</a>
                 <a href="portfolio/quienessomos.html">Quienes somos</a>
@@ -22,7 +22,28 @@
     </header>
 
     <section class="img_central">
-        <img src="img/primera-impresion.png">
+        <ul class="carrousel">
+            <li>
+                <input type="radio" id="car1" name="carRadio" checked>
+                <label for="car1"></label>
+                <img src="img/LogoMain.jpg" alt="">
+            </li>
+            <li>
+                <input type="radio" id="car2" name="carRadio">
+                <label for="car2"></label>
+                <img src="img/Desiertologo.jpg" alt="">
+            </li>
+            <li>
+                <input type="radio" id="car3" name="carRadio">
+                <label for="car3"></label>
+                <img src="img/luna.jpg" alt="">
+            </li>
+            <li>
+                <input type="radio" id="car4" name="carRadio">
+                <label for="car4"></label>
+                <img src="img/Colorado.jpg" alt="">
+            </li>
+        </ul>
     </section>
     <section class="infos">
         <div class="info">
