--- a/portfolio/servicios.html
+++ b/portfolio/servicios.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"><img src="../img/logoseur.jpg"></div>
+            <div class="logo"><img src="../img/logo.jpg"></div>
             <nav>
                 <a href="../index1.0.html">Inicio</a>
                 <a href="quienessomos.html">Quienes somos</a>
@@ -20,6 +20,10 @@
             </nav>
         </div>
     </header>
+
+    <section class="img_central1">
+        <img src="../img/Desiertologo%20copia.jpg">
+    </section>
 
     <div class="Fcontenedor-frase">
         <!--<img src="../img/repartos.png" class="Fimage"/>-->
