--- a/portfolio/quienessomos.html
+++ b/portfolio/quienessomos.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"><img src="../img/logoseur.jpg"></div>
+            <div class="logo"><img src="../img/logo.jpg"></div>
             <nav>
                 <a href="../index1.0.html">Inicio</a>
                 <a href="#">Quienes somos</a>
@@ -22,7 +22,7 @@
     </header>
 
     <section class="img_central1">
-        <img src="../img/Furgo-blanca-QS.jpg">
+        <img src="../img/LogoMain%20copia.jpg">
     </section>
 
     <div class="Mcuerpo">
