Creacion de rama gh-pahes, y actualizacion del los hipervinculos de index(Cambio de index.1.0 a index)

--- a/portfolio/condicionesdeservicio.html
+++ b/portfolio/condicionesdeservicio.html
@@ -48,7 +48,7 @@
       <div>
           <h3><a href="index.html">
                   Kooplers</a></h3>
-          <p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+          <p  class="XFooter">©2020 <a href="../index.html"> Kopplers </a> All Rights
               Reserved | Design by
               <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
               <p class="XFooter">Edited by ForCode++ <a href="ForCode++@gmail.com"> Email</a></p>
