--- a/portfolio/contacto.html
+++ b/portfolio/contacto.html
@@ -2,8 +2,8 @@
 <html lang="">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="../css/main.css"/>
     <title>Koppler Transporte Urgente</title>
     <script type="text/javascript" src="/javascript/contacto.js"></script>
 </head>
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="logo"><img src="../img/logo.jpg"></div>
             <nav>
-                <a href="../index1.0.html">Inicio</a>
+                <a href="../indexhtml">Inicio</a>
                 <a href="quienessomos.html">Quienes somos</a>
                 <a href="servicios.html">Servicios</a>
                 <a href="#">Contacto</a>
