--- a/portfolio/quienessomos.html
+++ b/portfolio/quienessomos.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <div class="logo"><img src="../img/logo.jpg"></div>
             <nav>
-                <a href="../index1.0.html">Inicio</a>
+                <a href="../index.html">Inicio</a>
                 <a href="#">Quienes somos</a>
                 <a href="servicios.html">Servicios</a>
                 <a href="contacto.html">Contacto</a>
