--- a/portfolio/contacto.html
+++ b/portfolio/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/main.css" />
     <title>Koppler Transporte Urgente</title>
-    <script type="text/javascript" src="/javascript/contacto.js"></script>
+    <script type="text/javascript" src="../javascript/contacto.js"></script>
 </head>
 
 <body>
