Modificado ruta de index

--- a/portfolio/contacto.html
+++ b/portfolio/contacto.html
@@ -13,7 +13,7 @@
         <div class="navbar">
             <div class="logo"><img src="../img/logo.jpg"></div>
             <nav>
-                <a href="../index1.0.html">Inicio</a>
+                <a href="../index.html">Inicio</a>
                 <a href="quienessomos.html">Quienes somos</a>
                 <a href="servicios.html">Servicios</a>
                 <a href="#">Contacto</a>
