--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </section>
     <footer>
-       <div class="crea"><p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
+       <div class="crea"><p  class="XFooter">©2020 <a href="../index.html"> Kopplers </a> All Rights
               Reserved <br><br> Designed by
               <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
               </div>
