--- a/portfolio/quienessomos.html
+++ b/portfolio/quienessomos.html
@@ -1,61 +1,74 @@
 <!DOCTYPE html>
 <html lang="">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/main.css" />
     <title>Koppler Transporte Urgente</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="navbar">
-            <div class="logo"><img src="../img/logo.jpg"></div>
-            <nav>
-                <a href="../index.html">Inicio</a>
-                <a href="#">Quienes somos</a>
-                <a href="servicios.html">Servicios</a>
-                <a href="contacto.html">Contacto</a>
-                <a href="trabajaconnosostros.html">Trabaja con nosotros</a>
-            </nav>
-        </div>
+      <div class="navbar">
+        <div class="logo"><img src="../img/logo.jpg" /></div>
+        <nav>
+          <a href="../index.html">Inicio</a>
+          <a href="#">Quienes somos</a>
+          <a href="servicios.html">Servicios</a>
+          <a href="contacto.html">Contacto</a>
+          <a href="trabajaconnosostros.html">Trabaja con nosotros</a>
+        </nav>
+      </div>
     </header>
 
     <section class="img_central1">
-        <img src="../img/LogoMain%20copia.jpg">
+      <img src="../img/LogoMain%20copia.jpg" />
     </section>
 
     <div class="Mcuerpo">
-        <div class="McuerpoB"><img src="../img/Mcuerpo2.jpg"></div>
-        <div class="McuerpoA">
-            <h2>Breve historia</h2>
-            <p>Comenzamos con un pequeño proyecto familiar, que con el paso del tiempo y el <br>buen hacer
-                fue creciendo paulatinamente hasta convertirnos en una de las<br> empresas de referencia,
-                con dedicación plena y un amplio conocimiento del sector.
-                <br> Actualmente contamos con una extensa flota de vehiculos con diferentes <br>funcionalidades.
-                Nuestra plantilla esta formada por 8 profesionales serios con <br>reconocida experiencia en el sector.
-            </p>
-        </div>
+      <div class="McuerpoB"><img src="../img/Mcuerpo2.jpg" /></div>
+      <div class="McuerpoA">
+        <h2>Breve historia</h2>
+        <p>
+          Comenzamos con un pequeño proyecto familiar, que con el paso del
+          tiempo y el <br />buen hacer fue creciendo paulatinamente hasta
+          convertirnos en una de las<br />
+          empresas de referencia, con dedicación plena y un amplio conocimiento
+          del sector. <br />
+          Actualmente contamos con una extensa flota de vehiculos con diferentes
+          <br />funcionalidades. Nuestra plantilla esta formada por 8
+          profesionales serios con <br />reconocida experiencia en el sector.
+        </p>
+      </div>
     </div>
     <div class="Mcuerpo2">
-        <div class="Mcuerpo2B"><img src="../img/Mcuerpo.jpg"></div>
-        <div class="Mcuerpo2A">
-            <h2>¿Por que elegirnos?</h2>
-            <p>Mucho mas que una empresa de transporte somos el profesional que <br>estas buscando:<br><br>
-                - Servicio personalizado, eficiente y rapido.<br>
-                <br>- Horarios flexibles: Recogida y entrega en los horarios establecidos por el <br>cliente.<br>
-                <br>- Seguro de transporte de mercancia con amplia covertura.
-            </p>
-        </div>
-
+      <div class="Mcuerpo2B"><img src="../img/Mcuerpo.jpg" /></div>
+      <div class="Mcuerpo2A">
+        <h2>¿Por que elegirnos?</h2>
+        <p>
+          Mucho mas que una empresa de transporte somos el profesional que
+          <br />estas buscando:<br /><br />
+          - Servicio personalizado, eficiente y rapido.<br />
+          <br />- Horarios flexibles: Recogida y entrega en los horarios
+          establecidos por el <br />cliente.<br />
+          <br />- Seguro de transporte de mercancia con amplia covertura.
+        </p>
+      </div>
     </div>
 
     <footer>
-       <div class="crea"><p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
-              Reserved <br><br> Designed by
-              <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
-              </div>
-        <div class="logofooter"><img src="../img/logo-uem.png"></div>
-    </footer>
+      <div class="crea">
+        <p class="XFooter">
+          ©2020 <a href="../index1.0.html"> Kopplers </a> All Rights Reserved
+          <br /><br />
+          Designed by
+          <a
+            href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk"
+            >ForCode++
+          </a>
+        </p>
+      </div>
 
-</body></html>
+      <div class="logofooter"><img src="../img/logo-uem.png" /></div>
+    </footer>
+  </body>
+</html>
