--- a/portfolio/trabajaconnosostros.html
+++ b/portfolio/trabajaconnosostros.html
@@ -1,85 +1,156 @@
 <!DOCTYPE html>
 <html lang="">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/main.css" />
     <title>Koppler Transporte Urgente</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="navbar">
-            <div class="logo"><img src="../img/logo.jpg"></div>
-            <nav>
-                <a href="../index.html">Inicio</a>
-                <a href="quienessomos.html">Quienes somos</a>
-                <a href="servicios.html">Servicios</a>
-                <a href="contacto.html">Contacto</a>
-                <a href="#">Trabaja con nosotros</a>
-            </nav>
-        </div>
+      <div class="navbar">
+        <div class="logo"><img src="../img/logo.jpg" /></div>
+        <nav>
+          <a href="../index.html">Inicio</a>
+          <a href="quienessomos.html">Quienes somos</a>
+          <a href="servicios.html">Servicios</a>
+          <a href="contacto.html">Contacto</a>
+          <a href="#">Trabaja con nosotros</a>
+        </nav>
+      </div>
     </header>
 
-   <section class="img_central1">
-        <img src="../img/Colorado%20copia.jpg">
+    <section class="img_central1">
+      <img src="../img/Colorado%20copia.jpg" />
     </section>
 
     <div class="Ploqbuscamos">
-        <h2>Lo que Buscamos y Ofrecemos</h2>
-        <p>Para que una persona trabaje en nuestra empresa, principalmente queremos gente con muchas ganas de trabajar, puntual y con dedicación. Una persona con esas cualidades tendrá muchas probabilidades de conseguir beneficios, como:
-            <br><br>
-            - Sueldo de entre 26k y 38k/brutos anuales.
-            <br><br>
-            - Ser tu propio jefe, con posibilidad de ascender y obtener una mayor cantidad de envios y beneficios.
-        </p>
+      <h2>Lo que Buscamos y Ofrecemos</h2>
+      <p>
+        Para que una persona trabaje en nuestra empresa, principalmente queremos
+        gente con muchas ganas de trabajar, puntual y con dedicación. Una
+        persona con esas cualidades tendrá muchas probabilidades de conseguir
+        beneficios, como: <br /><br />
+        - Sueldo de entre 26k y 38k/brutos anuales.
+        <br /><br />
+        - Ser tu propio jefe, con posibilidad de ascender y obtener una mayor
+        cantidad de envios y beneficios.
+      </p>
     </div>
     <div class="PRequisitos">
-        <h2>Requisitos Minimos</h2>
-        <p>Los requisitos que estamos buscando son:
-            <br><br>
-            - Carnet de conducir B.
-            <br><br>
-            - Horario flexible de trabajo.
-            <br><br>
-            - Experiencia minima: 2 años.
-            <br><br>
-            - Titulo de Bachillerato y nivel de inglés B2
-        </p>
+      <h2>Requisitos Minimos</h2>
+      <p>
+        Los requisitos que estamos buscando son: <br /><br />
+        - Carnet de conducir B.
+        <br /><br />
+        - Horario flexible de trabajo.
+        <br /><br />
+        - Experiencia minima: 2 años.
+        <br /><br />
+        - Titulo de Bachillerato y nivel de inglés B2
+      </p>
     </div>
 
     <div class="Poferta">
-        <h2>Inscripción a Oferta de Trabajo</h2>
-        <form action="mailto:koppler@gmail.com" name="PFoferta" method="post">
-            <p>Nombre: &nbsp;&nbsp;<input type="text" name="nombre" value="" size="40" required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apellidos: &nbsp;<input type="text" name="apellido" value="" size="40" required></p>
-            <p>Experiencia Laboral: &nbsp;&nbsp;<select name="Edad" required>
-                    <option value="" selected></option>
-                    <option value="">Menos de 1 año</option>
-                    <option value="">Entre 1 año y 3 años</option>
-                    <option value="">Mas de tres años</option>
-                </select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curriculum vitae:&nbsp; <input type="file" name="curriculum" required>
-            </p>
-            <p>Email: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="email" size="50" required></p>
-            <br>
-            <p>Comentarios:</p>
-            <p><textarea class="formtexa"></textarea></p>
+      <h2>Inscripción a Oferta de Trabajo</h2>
+      <form action="mailto:koppler@gmail.com" name="PFoferta" method="post">
+        <p>
+          Nombre: &nbsp;&nbsp;<input
+            type="text"
+            name="nombre"
+            value=""
+            size="40"
+            required
+          />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apellidos:
+          &nbsp;<input
+            type="text"
+            name="apellido"
+            value=""
+            size="40"
+            required
+          />
+        </p>
+        <p>
+          Experiencia Laboral: &nbsp;&nbsp;<select name="Edad" required>
+            <option value="" selected></option>
+            <option value="">Menos de 1 año</option>
+            <option value="">Entre 1 año y 3 años</option>
+            <option value="">Mas de tres años</option> </select
+          >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Curriculum
+          vitae:&nbsp; <input type="file" name="curriculum" required />
+        </p>
+        <p>
+          Email: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+            type="email"
+            size="50"
+            required
+          />
+        </p>
+        <br />
+        <p>Comentarios:</p>
+        <p><textarea class="formtexa"></textarea></p>
 
-            <br><div class="envires"><p><input type="submit" name="Enviar">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="reset" name="reset"></p></div><br>
-            <div class="condiuso">
-            <p class="XCondicion"><input type="checkbox" name="condiciones" value="check" required checked>
-                Deseo Recibir informacion sobre nuevas ofertas y noticias de <b><i><u>Koppler</u></i></b>. </p>
-            <p class="XCondicion"><input type="checkbox" name="condiciones" value="check" required>Acepto las<a href="../portfolio/condicionesdeservicio.html">
-                    Condiciones del servicio</a> y la
-                <a href="./politicadeprivacidad.html">Politica de privacidad</a> de <b><i><u>Koppler</u></i></b>. <br></p></div><br>
-
-        </form>
+        <br />
+        <div class="envires">
+          <p>
+            <input
+              type="submit"
+              name="Enviar"
+            />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+              type="reset"
+              name="reset"
+            />
+          </p>
+        </div>
+        <br />
+        <div class="condiuso">
+          <p class="XCondicion">
+            <input
+              type="checkbox"
+              name="condiciones"
+              value="check"
+              required
+              checked
+            />
+            Deseo Recibir informacion sobre nuevas ofertas y noticias de
+            <b
+              ><i><u>Koppler</u></i></b
+            >.
+          </p>
+          <p class="XCondicion">
+            <input
+              type="checkbox"
+              name="condiciones"
+              value="check"
+              required
+            />Acepto las<a href="../portfolio/condicionesdeservicio.html">
+              Condiciones del servicio</a
+            >
+            y la
+            <a href="./politicadeprivacidad.html">Politica de privacidad</a> de
+            <b
+              ><i><u>Koppler</u></i></b
+            >. <br />
+          </p>
+        </div>
+        <br />
+      </form>
     </div>
 
     <footer>
-       <div class="crea"><p  class="XFooter">©2020 <a href="../index1.0.html"> Kopplers </a> All Rights
-              Reserved <br><br> Designed by
-              <a href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk">ForCode++ </a>
-              </div>
-        <div class="logofooter"><img src="../img/logo-uem.png"></div>
+      <div class="crea">
+        <p class="XFooter">
+          ©2020 <a href="../index1.0.html"> Kopplers </a> All Rights Reserved
+          <br /><br />
+          Designed by
+          <a
+            href="https://game.classcraft.com/student/class/7rXv3MRJvxQPNBJ6g/dashboard/players/oYGacvQyXvGKdDTKk"
+            >ForCode++
+          </a>
+        </p>
+      </div>
+
+      <div class="logofooter"><img src="../img/logo-uem.png" /></div>
     </footer>
-</body></html>
+  </body>
+</html>
