--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
       </div>
     </section>
     <footer>
+      <div class="CASA">Juntos podemos QUEDATE EN CASA</div>
       <div class="crea">
+        
         <p class="XFooter">
+          
           ©2020 <a href="../index.html"> Kopplers </a> All Rights Reserved
           <br /><br />
           Designed by
@@ -90,6 +93,7 @@
       </div>
 
       <div class="logofooter"><img src="img/logo-uem.png" /></div>
+      <div class="loParamos"><img src="/img/LoParamos.jpg" /></div>
     </footer>
   </body>
 </html>
