--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
 
       <div class="logofooter"><img src="img/logo-uem.png" /></div>
-      <div class="loParamos"><img src="/img/LoParamos.jpg" /></div>
+      <div class="loParamos"><img src="img/LoParamos.jpg" /></div>
     </footer>
   </body>
 </html>
