Quedate en casa

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
     </section>
     <footer>
-      <div class="CASA">Juntos podemos QUEDATE EN CASA</div>
+      <div class="CASA"><t class="juntos"> Juntos podemos</t> #QUEDATE EN CASA</div>
       <div class="crea">
         
         <p class="XFooter">
